# Computer-Graphics

Final/: .~习题课2.pptx
Final/code/: .run.sh.swp  CMakeLists.txt  auto_run.sh  run.sh
Final/code/include/: aabb.hpp  camera.hpp  group.hpp  hit.hpp  material.hpp  mesh.hpp  plane.hpp  scene_parser.hpp  sphere.hpp  triangle.hpp  utils.hpp
Final/code/output/: my_scene2.bmp.bk
Final/code/src/: image.cpp  main.cpp  mesh.cpp  scene_parser.cpp  utils.cpp
Final/code/testcases/: my_scene.txt  my_scene1.txt  my_scene2.ppm  my_scene2.txt  my_scene3.ppm  my_scene3.txt  my_scene4.ppm  my_scene4.txt  my_scene5.ppm  my_scene5.txt  my_scene6.ppm  my_scene6.txt
Final/code/texture/: .butterfly.ppm.swp  butterfly.ppm  grid.ppm
Final/docs/: .report.md.swo  .report.md.swp  report.md
PA0.RasterGraphics/: REPORT.md
PA0.RasterGraphics/code/: CMakeLists.txt
PA0.RasterGraphics/code/include/: element.hpp
PA1.RayCasting/: .gitignore  REPORT.md
PA1.RayCasting/code/include/: camera.hpp  plane.hpp  sphere.hpp
PA1.RayCasting/student-code/: .gitignore  CMakeLists.txt  run_all.sh
PA1.RayCasting/student-code/include/: camera.hpp  material.hpp  sphere.hpp  triangle.hpp  utils.hpp
PA1.RayCasting/student-code/src/: main.cpp  mesh.cpp  utils.cpp
PA2.OpenGLMesh/: REPORT.md
PA2.OpenGLMesh/code/: CMakeLists.txt
PA2.OpenGLMesh/code/include/: material.hpp  mesh.hpp  plane.hpp  sphere.hpp  triangle.hpp
PA2.OpenGLMesh/code/src/: main.cpp  utils.cpp
PA3.BezierSurface/: .gitignore  REPORT.md
PA3.BezierSurface/code/: CMakeLists.txt  run.sh
PA4.Jittor/: CGAN.py  report.md
(+9 files in other folders)
